--- a/11. 10814_나이순 정렬.ipynb
+++ b/11. 10814_나이순 정렬.ipynb
@@ -2,8 +2,70 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 3\n",
+    "queue = [(21, 'Junkyu'), (21, 'Dohyun'), (20, 'Sunyoung')]\n",
+    "\n",
+    "# while queue:\n",
+    "min_idx = 0\n",
+    "for i in range(len(queue)):\n",
+    "    if queue[min_idx][0] > queue[i][0]:\n",
+    "        min_idx = i\n",
+    "print(min_idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 Sunyoung\n",
+      "21 Junkyu\n",
+      "21 Dohyun\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 3\n",
+    "queue = [(21, 'Junkyu'), (21, 'Dohyun'), (20, 'Sunyoung')]\n",
+    "\n",
+    "while queue:\n",
+    "    min_idx = 0\n",
+    "    for i in range(len(queue)):\n",
+    "        if queue[min_idx][0] > queue[i][0]:\n",
+    "            min_idx = i\n",
+    "    if queue[0][0] == queue[min_idx][0]:\n",
+    "        j, k = queue.pop(0)\n",
+    "        print(j, end=' ')\n",
+    "        print(k)\n",
+    "    else:\n",
+    "        j = queue.pop(0)\n",
+    "        queue.append(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdin",
@@ -53,7 +115,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -82,7 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "ename": "KeyboardInterrupt",
@@ -120,7 +194,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -140,6 +218,168 @@
     "# 21 Junkyu\n",
     "# 21 Dohyun\n",
     "# 20 Sunyoung"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3\n",
+      " 21 Junkyu\n",
+      " 21 Dohyun\n",
+      " 20 Sunyoung\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 Sunyoung\n",
+      "21 Junkyu\n",
+      "21 Dohyun\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''final -> 시간초과'''\n",
+    "n = int(input())\n",
+    "queue = list()\n",
+    "\n",
+    "for _ in range(n):\n",
+    "    x,y = input().split()\n",
+    "    x = int(x)\n",
+    "    queue.append((x, y))\n",
+    "\n",
+    "while queue:\n",
+    "    min_idx = 0\n",
+    "    for i in range(len(queue)):\n",
+    "        if queue[min_idx][0] > queue[i][0]:\n",
+    "            min_idx = i\n",
+    "    if queue[0][0] == queue[min_idx][0]:\n",
+    "        j, k = queue.pop(0)\n",
+    "        print(j, end=' ')\n",
+    "        print(k)\n",
+    "    else:\n",
+    "        j = queue.pop(0)\n",
+    "        queue.append(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# min함수\n",
+    "\n",
+    "arr = [(1, 'a'), (5, 'b'), (0, 'c')]\n",
+    "x = min(arr, key = lambda x: x[0])[0]\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3\n",
+      " 2 Jenny\n",
+      " 2 Uj\n",
+      " 1 hj\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 hj\n",
+      "2 Jenny\n",
+      "2 Uj\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''min 개선'''\n",
+    "n = int(input())\n",
+    "queue = list()\n",
+    "\n",
+    "for _ in range(n):\n",
+    "    x,y = input().split(' ')\n",
+    "    x = int(x)\n",
+    "    queue.append((x, y))\n",
+    "\n",
+    "while queue:\n",
+    "    min_value = min(queue, key = lambda x: x[0])[0]\n",
+    "    if queue[0][0] == min_value:\n",
+    "        j, k = queue.pop(0)\n",
+    "        print(j, end=' ')\n",
+    "        print(k)\n",
+    "    else:\n",
+    "        j = queue.pop(0)\n",
+    "        queue.append(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3\n",
+      " 4 jenny\n",
+      " 4 jerry\n",
+      " 1 ham\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 ham\n",
+      "4 jenny\n",
+      "4 jerry\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''해설'''\n",
+    "\n",
+    "n = int(input())\n",
+    "\n",
+    "array = []\n",
+    "\n",
+    "for _ in range(n):\n",
+    "    input_data = input().split(' ')\n",
+    "    array.append((int(input_data[0]), input_data[1]))\n",
+    "    \n",
+    "array = sorted(array, key = lambda x: x[0]) # sorted 함수 연습하기\n",
+    "# 키가 같으면 기본적으로 stable속성이 되어 배열 자체의 순서를 지킴\n",
+    "\n",
+    "for i in array:\n",
+    "    print(i[0], i[1])"
    ]
   },
   {
